# cpp_chatroom

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  PROTOCOL.MD  README.MD  async_test_server.cpp  build.sh  server_class.cpp  server_class.hpp  session.cpp  session.hpp  util_class.hpp
include/: logic.hpp  msgnode.hpp  server_class.hpp  session.hpp  util_class.hpp
include/common/: msgnode.hpp
include/common/redis/: base_redis_mgr.hpp
include/http/: gateway_class.hpp  gateway_rpc.hpp  http_server.hpp  req_handler.hpp
include/http/dbm/: dbconn.hpp  gateway_dbm.hpp  security.hpp
include/http/redis/: gateway_redis.hpp
include/log/: log_manager.hpp
include/server/: coro_session.hpp  io_context_pool.hpp  io_thread_pool.hpp  logic.hpp  msg_handler.hpp  server_class.hpp  server_rpc.hpp  session.hpp  session_manager.hpp  status_reporter.hpp
include/server/redis/: server_redis.hpp
include/server/rpc/: status_rpc_client.hpp
include/status/: README.MD  load_balancer.hpp  status_class.hpp  status_service_impl.hpp
include/status/redis/: status_redis.hpp
include/utils/: field_op.hpp  util_class.hpp  util_func.hpp
misc/: CMakeLists.txt  concurrent_test.cpp
misc/lib_example/: redis_test.cpp
misc/lib_example/grpc_test/: grpc_test.cpp  grpc_test_cli.cpp
proto/: CMakeLists.txt  README.MD  status.proto
src/: CMakeLists.txt  client_main.cpp  server_class.cpp  server_main.cpp  session.cpp
src/client/: CMakeLists.txt  README.MD  client_class.cpp  client_main.cpp
src/common/: README.MD  base_redis_mgr.cpp  timer.cpp
src/common/redis/: base_redis_mgr.cpp
src/http/: CMakeLists.txt  README.MD  gateway_class.cpp  gateway_main.cpp  http_server.cpp  req_handler.cpp
src/http/dbm/: dbconn.cpp  gateway_dbm.cpp  security.cpp
src/http/redis/: gateway_redis.cpp
src/include/client/: client_class.hpp
src/include/common/: msgnode.hpp  timer.hpp
src/include/common/redis/: base_redis_mgr.hpp  redis_lock.hpp
src/include/http/: gateway_class.hpp  http_server.hpp  req_handler.hpp
src/include/http/dbm/: dbconn.hpp  gateway_dbm.hpp  security.hpp
src/include/http/redis/: gateway_redis.hpp
src/include/http/rpc/: status_rpc_client.hpp
src/include/log/: log_manager.hpp
src/include/server/: io_context_pool.hpp  io_thread_pool.hpp  mq_handler.hpp  msg_handler.hpp  online_status_upload.hpp  server_class.hpp  session.hpp  session_manager.hpp  status_reporter.hpp
src/include/server/redis/: server_redis.hpp
src/include/server/rpc/: status_rpc_client.hpp
src/include/status/: load_balancer.hpp  status_class.hpp  status_service_impl.hpp  status_uploader.hpp
src/include/status/redis/: status_redis.hpp
src/include/utils/: field_op.hpp  snowflake_id.hpp  util_class.hpp  util_func.hpp
src/server/: CMakeLists.txt  README.MD  io_context_pool.cpp  io_thread_pool.cpp  logic.cpp  mq_handler.cpp  msg_handler.cpp  server_class.cpp  server_main.cpp  session.cpp  session_manager.cpp  status_reporter.cpp
src/server/redis/: server_redis.cpp
src/status/: CMakeLists.txt  README.MD  load_balancer.cpp  status_class.cpp  status_main.cpp  status_uploader.cpp
src/status/redis/: status_redis.cpp
test/: CMakeLists.txt  jsoncpp_test.cpp  redis_test.cpp
test/lib_example/: mysql_test.cpp
test/lib_example/grpc_test/: demo.grpc.pb.cc  demo.grpc.pb.h  demo.pb.cc  demo.pb.h  demo.proto
test/status/: load_balancer_test.cpp
